# cacheshrink

./: .gitignore  README.md  benchmark_generic.py  benchmark_llama.py  benchmark_mistral.py  benchmark_qwen.py  benchmark_qwen3.py  benchmark_vllm.py  pyproject.toml
.github/workflows/: publish.yml
cacheshrink/: __init__.py  attention.py  attention_detection.py  compression.py  config.py  converter.py  evaluation.py  hf_modeling.py  improved_compression.py  initialization.py  saving.py  trainer.py  utils.py  xkv_compression.py  xkv_initialization.py
cacheshrink/model_handlers/: __init__.py  base.py  generic.py  gpt2.py  llama.py
cacheshrink/vllm/: __init__.py  attention.py  config.py  model.py  plugin.py  saving.py  weight_loader.py
kvpress/: __init__.py  compression.py  fast_svd.py  improved_compression.py  initialization.py
kvpress/model_handlers/: mistral.py  qwen.py
tests/: __init__.py  conftest.py  test_attention.py  test_attention_detection.py  test_compression.py  test_config.py  test_converter.py  test_generic_handler.py  test_handlers.py  test_hf_loading.py  test_initialization.py  test_integration.py  test_qk_norm.py  test_vllm_integration.py  test_xkv_compression.py
